fix: Refine Service search table UI & fix bugs in WTT_SCH_ADDRESS
Remove unnecessary components & unused links in html view files
Refine Service related datatables.net scripts and its view files

--- a/views/partials/_content-service-search.html
+++ b/views/partials/_content-service-search.html
@@ -59,20 +59,21 @@
               </div>
             </div>
             <!--begin: Datatable-->
-            <table class="table table-separate table-head-custom nowrap" id="kt_datatable">
+            <table class="table table-separate table-head-custom table-checkable collapsed" id="kt_datatable">
               <thead>
               <tr>
-                <th class="dtr-control">기능</th>
                 <th>번호</th>
                 <th>접수자</th>
                 <th>일자</th>
                 <th>민원인</th>
                 <th>연락처</th>
-                <th>주소</th>
-                <th>접수</th>
-                <th>진행</th>
-                <th>상세</th>
-                <th>대행</th>
+                <th>지번 주소</th>
+                <th>도로명 주소</th>
+                <th>접수내용</th>
+                <th>진행상태</th>
+                <th>민원상세</th>
+                <th>대행업체</th>
+                <th>기능</th>
                 <th>x</th>
                 <th>y</th>
               </tr>
