--- a/views/partials/_header-service-search.html
+++ b/views/partials/_header-service-search.html
@@ -105,7 +105,7 @@
         <!--end::Toggle-->
 
         <!--begin::Dropdown-->
-        <div class="dropdown-menu p-0 m-0 dropdown-menu-right dropdown-menu-anim-up dropdown-menu-md">
+        <div class="dropdown-menu p-0 m-0 dropdown-menu-right dropdown-menu-anim-up dropdown-menu-sm">
 
           <!--[html-partial:begin:{"id":"demo1/dist/inc/view/partials/content/dropdowns/dropdown-4","page":"index"}]/-->
           <!-- TODO: 구별이 쉽게 선택한 메뉴에 primary color 배경을 적용 -->
@@ -116,24 +116,24 @@
 													<span class="navi-icon">
 														<i class="la la-pen icon-xl"></i>
 													</span>
-                <span class="navi-text">&nbsp;민원 신규 등록</span>
+                <span class="navi-text">&nbsp;민원 등록</span>
               </a>
             </li>
-            <li class="navi-item">
-              <a href="#" class="navi-link" id="navi-search-link-1">
-													<span class="navi-icon">
-														<i class="la la-map-marked-alt icon-xl"></i>
-													</span>
-                <span class="navi-text">&nbsp;민원 현황 보기</span>
-                <span class="label label-light-danger font-weight-bold label-inline">5</span>
-              </a>
-            </li>
+<!--            <li class="navi-item">-->
+<!--              <a href="#" class="navi-link" id="navi-search-link-1">-->
+<!--													<span class="navi-icon">-->
+<!--														<i class="la la-map-marked-alt icon-xl"></i>-->
+<!--													</span>-->
+<!--                <span class="navi-text">&nbsp;민원 현황 보기</span>-->
+<!--                <span class="label label-light-danger font-weight-bold label-inline">5</span>-->
+<!--              </a>-->
+<!--            </li>-->
             <li class="navi-item">
               <a href="service/search" class="navi-link" id="navi-search-link-2">
 													<span class="navi-icon">
 														<i class="la la-search-plus icon-xl"></i>
 													</span>
-                <span class="navi-text">&nbsp;민원 상세 검색</span>
+                <span class="navi-text">&nbsp;민원 조회</span>
               </a>
             </li>
             <div class="separator separator-dashed my-4"></div>
@@ -147,15 +147,15 @@
               </a>
             </li>
             <div class="separator separator-dashed my-4"></div>
-            <li class="navi-item">
-              <form class="px-4 py-3">
-                <div class="input-icon">
-                  <input type="text" class="form-control" placeholder=""/>
-                  <span><i class="la la-flash icon-lg"></i></span>
-                </div>
-                <span class="form-text text-muted">민원인, 연락처 등으로 검색합니다</span>
-              </form>
-            </li>
+<!--            <li class="navi-item">-->
+<!--              <form class="px-4 py-3">-->
+<!--                <div class="input-icon">-->
+<!--                  <input type="text" class="form-control" placeholder=""/>-->
+<!--                  <span><i class="la la-flash icon-lg"></i></span>-->
+<!--                </div>-->
+<!--                <span class="form-text text-muted">민원인, 연락처 등으로 검색합니다</span>-->
+<!--              </form>-->
+<!--            </li>-->
           </ul>
 
           <!--end::Navigation-->
@@ -179,14 +179,14 @@
       <!--end::Quick panel-->
 
       <!--begin::User-->
-      <div class="topbar-item">
-        <button type="button"
-                class="btn btn-sm font-weight-bolder btn-text-light btn-hover-bg-light btn-hover-text-primary ml-2 px-2 py-2 font-size-lg"
-                data-toggle="dropdown" aria-haspopup="false" aria-expanded="false"
-                data-offset="0,10">
-          사용자
-        </button>
-      </div>
+<!--      <div class="topbar-item">-->
+<!--        <button type="button"-->
+<!--                class="btn btn-sm font-weight-bolder btn-text-light btn-hover-bg-light btn-hover-text-primary ml-2 px-2 py-2 font-size-lg"-->
+<!--                data-toggle="dropdown" aria-haspopup="false" aria-expanded="false"-->
+<!--                data-offset="0,10">-->
+<!--          사용자-->
+<!--        </button>-->
+<!--      </div>-->
 
       <!--end::User-->
 
