--- a/views/partials/_header.html
+++ b/views/partials/_header.html
@@ -120,52 +120,52 @@
       <!--end::Tablet & Mobile Search-->
 
       <!--begin::Create-->
-      <div class="topbar-item" id="ol-section-code-wtl">
+<!--      <div class="topbar-item" id="ol-section-code-wtl">-->
 
-        <div class="collapse nav justify-content-center" id="topbarToggle">
-          <div class="topbar-item" id="viw_wtl_wtsa_as">
-            <button type="button"
-                    class="btn btn-sm font-weight-bolder btn-text-light btn-hover-bg-light btn-hover-text-primary
-                    ml-1 px-2 py-2 font-size-lg"
-                    data-toggle="dropdown" aria-haspopup="false" aria-expanded="false"
-                    data-offset="0,10">
-              대블럭
-            </button>
-            <div class="dropdown-menu p-0 m-0 dropdown-menu-anim-up dropdown-menu-sm"></div>
-          </div>
-          <div class="topbar-item" id="viw_wtl_wtssa_as">
-            <button type="button"
-                    class="btn btn-sm font-weight-bolder btn-text-light btn-hover-bg-light btn-hover-text-primary
-                    ml-1 px-2 py-2 font-size-lg section-button"
-                    data-toggle="dropdown" aria-haspopup="false" aria-expanded="false"
-                    data-offset="0,10">
-              중블럭
-            </button>
-            <div class="dropdown-menu p-0 m-0 dropdown-menu-anim-up dropdown-menu-sm"></div>
-          </div>
-          <div class="topbar-item" id="viw_wtl_wtsba_as">
-            <button type="button"
-                    class="btn btn-sm font-weight-bolder btn-text-light btn-hover-bg-light btn-hover-text-primary
-                    ml-1 px-2 py-2 font-size-lg section-button"
-                    data-toggle="dropdown" aria-haspopup="false" aria-expanded="false"
-                    data-offset="0,10">
-              소블럭
-            </button>
-            <div class="dropdown-menu p-0 m-0 dropdown-menu-anim-up dropdown-menu-sm"></div>
-          </div>
-        </div>
+<!--        <div class="collapse nav justify-content-center" id="topbarToggle">-->
+<!--          <div class="topbar-item" id="viw_wtl_wtsa_as">-->
+<!--            <button type="button"-->
+<!--                    class="btn btn-sm font-weight-bolder btn-text-light btn-hover-bg-light btn-hover-text-primary-->
+<!--                    ml-1 px-2 py-2 font-size-lg"-->
+<!--                    data-toggle="dropdown" aria-haspopup="false" aria-expanded="false"-->
+<!--                    data-offset="0,10">-->
+<!--              대블럭-->
+<!--            </button>-->
+<!--            <div class="dropdown-menu p-0 m-0 dropdown-menu-anim-up dropdown-menu-sm"></div>-->
+<!--          </div>-->
+<!--          <div class="topbar-item" id="viw_wtl_wtssa_as">-->
+<!--            <button type="button"-->
+<!--                    class="btn btn-sm font-weight-bolder btn-text-light btn-hover-bg-light btn-hover-text-primary-->
+<!--                    ml-1 px-2 py-2 font-size-lg section-button"-->
+<!--                    data-toggle="dropdown" aria-haspopup="false" aria-expanded="false"-->
+<!--                    data-offset="0,10">-->
+<!--              중블럭-->
+<!--            </button>-->
+<!--            <div class="dropdown-menu p-0 m-0 dropdown-menu-anim-up dropdown-menu-sm"></div>-->
+<!--          </div>-->
+<!--          <div class="topbar-item" id="viw_wtl_wtsba_as">-->
+<!--            <button type="button"-->
+<!--                    class="btn btn-sm font-weight-bolder btn-text-light btn-hover-bg-light btn-hover-text-primary-->
+<!--                    ml-1 px-2 py-2 font-size-lg section-button"-->
+<!--                    data-toggle="dropdown" aria-haspopup="false" aria-expanded="false"-->
+<!--                    data-offset="0,10">-->
+<!--              소블럭-->
+<!--            </button>-->
+<!--            <div class="dropdown-menu p-0 m-0 dropdown-menu-anim-up dropdown-menu-sm"></div>-->
+<!--          </div>-->
+<!--        </div>-->
 
-        <!--begin::Toggle-->
-        <button type="button" id="section-toggle"
-                class="btn btn-sm font-weight-bolder btn-text-light btn-hover-bg-success btn-hover-text-light
-                ml-2 px-2 py-2 font-size-lg"
-                data-toggle="collapse" data-target="#topbarToggle"
-                aria-haspopup="false" aria-expanded="false">
-          블럭
-        </button>
+<!--        &lt;!&ndash;begin::Toggle&ndash;&gt;-->
+<!--        <button type="button" id="section-toggle"-->
+<!--                class="btn btn-sm font-weight-bolder btn-text-light btn-hover-bg-success btn-hover-text-light-->
+<!--                ml-2 px-2 py-2 font-size-lg"-->
+<!--                data-toggle="collapse" data-target="#topbarToggle"-->
+<!--                aria-haspopup="false" aria-expanded="false">-->
+<!--          블럭-->
+<!--        </button>-->
 
-        <!--end::Toggle-->
-      </div>
+<!--        &lt;!&ndash;end::Toggle&ndash;&gt;-->
+<!--      </div>-->
 
       <!--end::Create-->
 
@@ -269,7 +269,7 @@
         <!--end::Toggle-->
 
         <!--begin::Dropdown-->
-        <div class="dropdown-menu p-0 m-0 dropdown-menu-right dropdown-menu-anim-up dropdown-menu-md">
+        <div class="dropdown-menu p-0 m-0 dropdown-menu-right dropdown-menu-anim-up dropdown-menu-sm">
 
           <!--[html-partial:begin:{"id":"demo1/dist/inc/view/partials/content/dropdowns/dropdown-4","page":"index"}]/-->
           <!-- TODO: 구별이 쉽게 선택한 메뉴에 primary color 배경을 적용 -->
@@ -280,24 +280,24 @@
 													<span class="navi-icon">
 														<i class="la la-pen icon-xl"></i>
 													</span>
-                <span class="navi-text">&nbsp;민원 신규 등록</span>
+                <span class="navi-text">&nbsp;민원 등록</span>
               </a>
             </li>
-            <li class="navi-item">
-              <a href="#" class="navi-link" id="navi-search-link-1">
-													<span class="navi-icon">
-														<i class="la la-map-marked-alt icon-xl"></i>
-													</span>
-                <span class="navi-text">&nbsp;민원 현황 보기</span>
-                <span class="label label-light-danger font-weight-bold label-inline">5</span>
-              </a>
-            </li>
+<!--            <li class="navi-item">-->
+<!--              <a href="#" class="navi-link" id="navi-search-link-1">-->
+<!--													<span class="navi-icon">-->
+<!--														<i class="la la-map-marked-alt icon-xl"></i>-->
+<!--													</span>-->
+<!--                <span class="navi-text">&nbsp;민원 현황 보기</span>-->
+<!--                <span class="label label-light-danger font-weight-bold label-inline">5</span>-->
+<!--              </a>-->
+<!--            </li>-->
             <li class="navi-item">
               <a href="service/search" class="navi-link" id="navi-search-link-2">
 													<span class="navi-icon">
 														<i class="la la-search-plus icon-xl"></i>
 													</span>
-                <span class="navi-text">&nbsp;민원 상세 검색</span>
+                <span class="navi-text">&nbsp;민원 조회</span>
               </a>
             </li>
             <div class="separator separator-dashed my-4"></div>
@@ -311,15 +311,15 @@
               </a>
             </li>
             <div class="separator separator-dashed my-4"></div>
-            <li class="navi-item">
-              <form class="px-4 py-3">
-                <div class="input-icon">
-                  <input type="text" class="form-control" placeholder=""/>
-                  <span><i class="la la-flash icon-lg"></i></span>
-                </div>
-                <span class="form-text text-muted">민원인, 연락처 등으로 검색합니다</span>
-              </form>
-            </li>
+<!--            <li class="navi-item">-->
+<!--              <form class="px-4 py-3">-->
+<!--                <div class="input-icon">-->
+<!--                  <input type="text" class="form-control" placeholder=""/>-->
+<!--                  <span><i class="la la-flash icon-lg"></i></span>-->
+<!--                </div>-->
+<!--                <span class="form-text text-muted">민원인, 연락처 등으로 검색합니다</span>-->
+<!--              </form>-->
+<!--            </li>-->
           </ul>
 
           <!--end::Navigation-->
@@ -343,14 +343,14 @@
       <!--end::Quick panel-->
 
       <!--begin::User-->
-      <div class="topbar-item">
-        <button type="button"
-                class="btn btn-sm font-weight-bolder btn-text-light btn-hover-bg-light btn-hover-text-primary ml-2 px-2 py-2 font-size-lg"
-                data-toggle="dropdown" aria-haspopup="false" aria-expanded="false"
-                data-offset="0,10">
-          사용자
-        </button>
-      </div>
+<!--      <div class="topbar-item">-->
+<!--        <button type="button"-->
+<!--                class="btn btn-sm font-weight-bolder btn-text-light btn-hover-bg-light btn-hover-text-primary ml-2 px-2 py-2 font-size-lg"-->
+<!--                data-toggle="dropdown" aria-haspopup="false" aria-expanded="false"-->
+<!--                data-offset="0,10">-->
+<!--          사용자-->
+<!--        </button>-->
+<!--      </div>-->
 
       <!--end::User-->
 
