--- a/views/partials/_subheader/_subheader-service-register.html
+++ b/views/partials/_subheader/_subheader-service-register.html
@@ -16,10 +16,10 @@
         <!--begin::Breadcrumb-->
         <ul class="breadcrumb breadcrumb-transparent breadcrumb-dot font-weight-bold my-2 p-0">
           <li class="breadcrumb-item">
-            <a href="/register" class="text-muted">관리</a>
+            <div class="text-muted">관리</div>
           </li>
           <li class="breadcrumb-item">
-            <a href="/register" class="text-muted">민원</a>
+            <div class="text-muted">민원</div>
           </li>
         </ul>
 
