--- a/views/service-register.html
+++ b/views/service-register.html
@@ -51,7 +51,7 @@
 
 <!--[html-partial:include:{"file":"partials/_extras/offcanvas/quick-panel.html"}]/-->
 
-<!--[html-partial:include:{"file":"partials/_extras/chat.html"}]/-->{{> _extras/chat}}
+<!--[html-partial:include:{"file":"partials/_extras/chat.html"}]/-->
 
 <!--[html-partial:include:{"file":"partials/_extras/scrolltop.html"}]/-->{{> _extras/scrolltop}}
 
