--- a/views/partials/_modal/_pres-manage.html
+++ b/views/partials/_modal/_pres-manage.html
@@ -7,28 +7,20 @@
         <h5 class="modal-title" id="exampleModal2Label">가압장 관리업체 현황</h5>
         <!--begin::Dropdown-->
         <div class="dropdown dropdown-inline mr-2">
-          <button type="button" class="btn btn-light-primary btn-sm font-weight-bolder dropdown-toggle"
-                  data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            <i class="la la-download"></i>내보내기
-          </button>
-          <!--begin::Dropdown Menu-->
+          <button type="button" class="btn btn-light-primary btn-sm font-weight-bolder" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <i class="la la-download"></i>내보내기</button>
           <div class="dropdown-menu dropdown-menu-sm dropdown-menu-right">
-            <ul class="nav flex-column nav-hover">
-              <li class="nav-item">
-                <a href="#" class="nav-link" id="export_print_pres">
-                  <i class="nav-icon la la-print"></i>
-                  <span class="nav-text">인쇄</span>
-                </a>
-              </li>
-              <li class="nav-item">
-                <a href="#" class="nav-link" id="export_excel_pres">
-                  <i class="nav-icon la la-file-excel-o"></i>
-                  <span class="nav-text">Excel</span>
+            <ul class="navi flex-column navi-hover py-2">
+              <li class="navi-item">
+                <a href="#" class="navi-link" id="export_excel_pres">
+																<span class="navi-icon">
+																	<i class="la la-file-excel-o"></i>
+																</span>
+                  <span class="navi-text">Excel</span>
                 </a>
               </li>
             </ul>
           </div>
-          <!--end::Dropdown Menu-->
         </div>
         <!--end::Dropdown-->
       </div>
