--- a/views/partials/_modal/_sch-address.html
+++ b/views/partials/_modal/_sch-address.html
@@ -6,29 +6,29 @@
       <div class="modal-header">
         <h5 class="modal-title" id="exampleModalLabel"></h5>
         <!--begin::Dropdown-->
-        <div class="dropdown dropdown-inline mr-2">
-          <button type="button" class="btn btn-light-primary btn-sm font-weight-bolder dropdown-toggle"
-                  data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            <i class="la la-download"></i>내보내기
-          </button>
-          <!--begin::Dropdown Menu-->
+        <div class="dropdown dropdown-inline">
+          <button type="button" class="btn btn-light-primary btn-sm font-weight-bolder" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <i class="la la-download"></i>내보내기</button>
           <div class="dropdown-menu dropdown-menu-sm dropdown-menu-right">
-            <ul class="nav flex-column nav-hover">
-              <li class="nav-item">
-                <a href="#" class="nav-link" id="export_print_schedule">
-                  <i class="nav-icon la la-print"></i>
-                  <span class="nav-text">인쇄</span>
+            <ul class="navi flex-column navi-hover py-2">
+              <li class="navi-item">
+                <a href="#" class="navi-link" id="export_print_schedule">
+																<span class="navi-icon">
+																	<i class="la la-print"></i>
+																</span>
+                  <span class="navi-text">인쇄</span>
                 </a>
               </li>
-              <li class="nav-item">
-                <a href="#" class="nav-link" id="export_excel_schedule">
-                  <i class="nav-icon la la-file-excel-o"></i>
-                  <span class="nav-text">Excel</span>
+              <li class="navi-item">
+                <a href="#" class="navi-link" id="export_excel_schedule">
+																<span class="navi-icon">
+																	<i class="la la-file-excel-o"></i>
+																</span>
+                  <span class="navi-text">Excel</span>
                 </a>
               </li>
             </ul>
           </div>
-          <!--end::Dropdown Menu-->
         </div>
         <!--end::Dropdown-->
       </div>
@@ -37,6 +37,7 @@
         <table class="table table-separate table-head-custom table-responsive-xl hover" id="kt_datatable_schedule">
           <thead>
           <tr>
+            <th>기간</th>
             <th>업체명</th>
             <th>비상근무기간</th>
             <th>대표자</th>
