fix: Adjust popover size to match text & Change "WTL_USERLABEL_PS" icon

--- a/tools/webpack/webgis/maps/openlayers/overlay/overlay.scss
+++ b/tools/webpack/webgis/maps/openlayers/overlay/overlay.scss
@@ -1,7 +1,11 @@
 // address
 
-.popover-body {
-  min-width: 300px;
+.popover {
+  min-width: max-content;
+
+  .popover-body {
+    min-width: max-content;
+  }
 }
 
 // notification
