fix: Fix bugs in kakao HYBRID(위성) map & RoadView function

--- a/views/partials/_header-service-search.html
+++ b/views/partials/_header-service-search.html
@@ -25,7 +25,7 @@
       <!--end::Aside Toggle-->
 
       <!--begin::Logo-->
-      <a href="javascript:;" data-container="body">
+      <a href="/">
         <img alt="Logo" src="assets/media/logos/logo-yeongju-2.png" class="logo-sticky max-h-35px"/>
       </a>
 
