--- a/views/partials/_header-mobile.html
+++ b/views/partials/_header-mobile.html
@@ -2,8 +2,8 @@
 <div id="kt_header_mobile" class="header-mobile header-mobile-fixed">
 
   <!--begin::Logo-->
-  <a href="index.html">
-    <img alt="Logo" src="assets/media/logos/logo-letter-1.png" class="logo-default max-h-30px"/>
+  <a href="/">
+    <img alt="Logo" src="assets/media/logos/logo-yeongju-2.png" class="logo-sticky max-h-35px"/>
   </a>
 
   <!--end::Logo-->
