--- a/views/partials/_header-service-register.html
+++ b/views/partials/_header-service-register.html
@@ -25,8 +25,7 @@
       <!--end::Aside Toggle-->
 
       <!--begin::Logo-->
-      <a href="javascript:;" data-container="body" data-toggle="tooltip" data-placement="bottom" data-theme="dark"
-         id="topbar-logo" title="초기 위치로 이동합니다">
+      <a href="/">
         <img alt="Logo" src="assets/media/logos/logo-yeongju-2.png" class="logo-sticky max-h-35px"/>
       </a>
 
