--- a/tools/webpack/webgis/service/service.scss
+++ b/tools/webpack/webgis/service/service.scss
@@ -3,7 +3,8 @@
 // Source reference not found
 
 .form-group {
-  margin-bottom: 1rem;
+  //margin-top: 1.5rem;
+  margin-bottom: 1.0rem;
 }
 
 .form-control {
