--- a/views/partials/_content-service-register.html
+++ b/views/partials/_content-service-register.html
@@ -5,7 +5,7 @@
     <div class="row">
       <div class="col-md-6">
         <!--begin::Card-->
-        <div class="card card-custom example example-compact card-fit card-border card-stretch" id="map">
+        <div class="card card-custom example example-compact card-fit card-border card-stretch" id="map_register">
           <!--begin::Form-->
           <!--end::Form-->
         </div>
@@ -40,7 +40,7 @@
                   </div>
                 </div>
               </div>
-              <div class="separator separator-dashed my-5"></div>
+              <div class="separator separator-dashed my-6"></div>
               <div class="form-group row">
                 <label class="col-lg-1 col-form-label text-nowrap">민원인</label>
                 <div class="col-lg-3">
@@ -145,7 +145,7 @@
               <div class="form-group row">
                 <label class="col-lg-1 col-form-label text-nowrap">상세내용</label>
                 <div class="col-lg-11">
-                  <textarea class="form-control" name="apl_exp" rows="1" maxlength="120"
+                  <textarea class="form-control" name="apl_exp" rows="3" maxlength="120"
                             placeholder="민원 상세 내용"></textarea>
                 </div>
               </div>
