--- a/views/partials/_header-service-search.html
+++ b/views/partials/_header-service-search.html
@@ -32,7 +32,7 @@
       <!--end::Logo-->
 
       <!--begin::Desktop Search-->
-      <div class="quick-search quick-search-inline ml-15 w-375px h-35px" id="kt_quick_search_inline" hidden>
+      <div class="quick-search quick-search-inline ml-15 w-375px h-35px" id="kt_quick_search_inline">
 
         <!--begin::Form-->
         <form method="get" class="quick-search-form">
