--- a/views/service-search.html
+++ b/views/service-search.html
@@ -137,7 +137,8 @@
 
 <!--begin::Page Vendors(used by this page)-->
 <script src="assets/plugins/custom/datatables/datatables.bundle.js"></script>
-<script src="https://openapi.map.naver.com/openapi/v3/maps.js?ncpClientId=48ezy1hyob&submodules=visualization" type="text/javascript"></script>
+<script src="https://dapi.kakao.com/v2/maps/sdk.js?appkey=162a033764cd83534e05d07b405f4580&libraries=services" type="text/javascript"></script>
+<!--<script src="https://openapi.map.naver.com/openapi/v3/maps.js?ncpClientId=48ezy1hyob&submodules=visualization" type="text/javascript"></script>-->
 <!--end::Page Vendors-->
 
 <!--begin::Page Scripts(used by this page)-->
