--- a/views/partials/_modal/_pres-manage.html
+++ b/views/partials/_modal/_pres-manage.html
@@ -1,14 +1,16 @@
 <!-- Modal-->
 <div class="modal fade" id="exampleModal2" tabindex="-1" role="dialog" aria-labelledby="exampleModal2Label"
      aria-hidden="true">
-  <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+  <div class="modal-dialog modal-dialog-scrollable modal-dialog-centered modal-lg" role="document">
     <div class="modal-content">
       <div class="modal-header">
         <h5 class="modal-title" id="exampleModal2Label">가압장 관리업체 현황</h5>
         <!--begin::Dropdown-->
         <div class="dropdown dropdown-inline mr-2">
-          <button type="button" class="btn btn-light-primary btn-sm font-weight-bolder" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            <i class="la la-download"></i>내보내기</button>
+          <button type="button" class="btn btn-light-primary btn-sm font-weight-bolder" data-toggle="dropdown"
+                  aria-haspopup="true" aria-expanded="false">
+            <i class="la la-download"></i>내보내기
+          </button>
           <div class="dropdown-menu dropdown-menu-sm dropdown-menu-right">
             <ul class="navi flex-column navi-hover py-2">
               <li class="navi-item">
@@ -25,17 +27,19 @@
         <!--end::Dropdown-->
       </div>
       <div class="modal-body">
-        <!--begin: Datatable-->
-        <table class="table table-separate table-head-custom table-responsive-lg hover" id="kt_datatable_pres">
-          <thead>
-          <tr>
-            <th>가압장명</th>
-            <th>관리업체</th>
-            <th>연락처(대표)</th>
-            <th>연락처(현장)</th>
-          </tr>
-          </thead>
-        </table>
+        <div data-scroll="true" data-height="625">
+          <!--begin: Datatable-->
+          <table class="table table-separate table-head-custom table-responsive-lg hover" id="kt_datatable_pres">
+            <thead>
+            <tr>
+              <th>가압장명</th>
+              <th>관리업체</th>
+              <th>연락처(대표)</th>
+              <th>연락처(현장)</th>
+            </tr>
+            </thead>
+          </table>
+        </div>
         <!--end: Datatable-->
       </div>
     </div>
