--- a/views/partials/_modal/_sch-address.html
+++ b/views/partials/_modal/_sch-address.html
@@ -1,14 +1,16 @@
 <!-- Modal-->
 <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
      aria-hidden="true">
-  <div class="modal-dialog modal-dialog-centered modal-xl" role="document">
+  <div class="modal-dialog modal-dialog-scrollable modal-dialog-centered modal-xl" role="document">
     <div class="modal-content">
       <div class="modal-header">
         <h5 class="modal-title" id="exampleModalLabel"></h5>
         <!--begin::Dropdown-->
         <div class="dropdown dropdown-inline">
-          <button type="button" class="btn btn-light-primary btn-sm font-weight-bolder" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            <i class="la la-download"></i>내보내기</button>
+          <button type="button" class="btn btn-light-primary btn-sm font-weight-bolder" data-toggle="dropdown"
+                  aria-haspopup="true" aria-expanded="false">
+            <i class="la la-download"></i>내보내기
+          </button>
           <div class="dropdown-menu dropdown-menu-sm dropdown-menu-right">
             <ul class="navi flex-column navi-hover py-2">
               <li class="navi-item">
@@ -33,24 +35,24 @@
         <!--end::Dropdown-->
       </div>
       <div class="modal-body">
-        <!--begin: Datatable-->
-        <table class="table table-separate table-head-custom table-responsive-xl hover" id="kt_datatable_schedule">
-          <thead>
-          <tr>
-            <th>기간</th>
-            <th>업체명</th>
-            <th>비상근무기간</th>
-            <th>대표자</th>
-            <th>연락처(대표)</th>
-            <th>현장소장</th>
-            <th>연락처(현장)</th>
-            <th>비고</th>
-          </tr>
-          </thead>
-        </table>
-        <!--end: Datatable-->
-      </div>
-      <div class="modal-footer">
+        <div data-scroll="true" data-height="625">
+          <!--begin: Datatable-->
+          <table class="table table-separate table-head-custom table-responsive-xl hover" id="kt_datatable_schedule">
+            <thead>
+            <tr>
+              <th>기간</th>
+              <th>업체명</th>
+              <th>비상근무기간</th>
+              <th>대표자</th>
+              <th>연락처(대표)</th>
+              <th>현장소장</th>
+              <th>연락처(현장)</th>
+              <th>비고</th>
+            </tr>
+            </thead>
+          </table>
+          <div id="kt_datatable_schedule_ext"></div>
+        </div>
       </div>
     </div>
   </div>
