--- a/views/index.html
+++ b/views/index.html
@@ -48,7 +48,7 @@
 
 <!--[html-partial:include:{"file":"partials/_extras/offcanvas/quick-panel.html"}]/-->
 
-<!--[html-partial:include:{"file":"partials/_extras/chat.html"}]/-->{{> _extras/chat}}
+<!--[html-partial:include:{"file":"partials/_extras/chat.html"}]/-->{{> _modal/_ol-info}} {{> _modal/_ol-history}} {{> _modal/_ol-photo}}
 
 <!--[html-partial:include:{"file":"partials/_extras/scrolltop.html"}]/-->{{> _extras/scrolltop}}
 
@@ -137,7 +137,7 @@
 <!--begin::Page Vendors(used by this page)-->
 <script src="assets/plugins/custom/datatables/datatables.bundle.js"></script>
 <script src="https://dapi.kakao.com/v2/maps/sdk.js?appkey=162a033764cd83534e05d07b405f4580&libraries=services" type="text/javascript"></script>
-<script src="https://openapi.map.naver.com/openapi/v3/maps.js?ncpClientId=48ezy1hyob&submodules=panorama,geocoder" type="text/javascript"></script>
+<!--<script src="https://openapi.map.naver.com/openapi/v3/maps.js?ncpClientId=48ezy1hyob&submodules=panorama,geocoder" type="text/javascript"></script>-->
 <!--end::Page Vendors-->
 
 <!--begin::Page Scripts(used by this page)-->
