--- a/views/partials/_modal/_ol-info.html
+++ b/views/partials/_modal/_ol-info.html
@@ -36,17 +36,17 @@
         <!--begin::Footer-->
         <div class="card-footer">
           <!--begin::Compose-->
-          <a href="javascript:;" class="btn btn-outline-secondary btn-md font-weight-bolder" id="btn_location"
+          <a href="javascript:;" class="btn btn-outline-secondary btn-hover-primary btn-md font-weight-bolder" id="btn_location"
              data-toggle="tooltip" title="화면 가운데로 이동" data-placement="auto">
-            <i class="fas fa-map-marker-alt icon-md"></i>
+            <i class="fas fa-map-marker-alt icon-md" id="btn_location"></i>
           </a>
           <div class="btn-group" role="group">
-            <a href="javascript:;" class="btn btn-outline-secondary btn-md font-weight-bolder" id="btn_history_modal">
-              <i class="far fa-file-alt icon-md"></i> 보수내역
-            </a>
-            <a href="javascript:;" class="btn btn-outline-secondary btn-md font-weight-bolder" id="btn_photo_modal">
-              <i class="far fa-file-image icon-md"></i> 사진보기
-            </a>
+<!--              <a href="javascript:;" class="btn btn-outline-secondary btn-md font-weight-bolder" id="btn_history_modal">-->
+<!--                <i class="far fa-file-alt icon-md" id="btn_history_modal"></i> 보수내역-->
+<!--              </a>-->
+<!--              <a href="javascript:;" class="btn btn-outline-secondary btn-md font-weight-bolder" id="btn_photo_modal">-->
+<!--                <i class="far fa-file-image icon-md" id="btn_photo_modal"></i> 사진보기-->
+<!--              </a>-->
           </div>
           <!--begin::Compose-->
         </div>
