--- a/views/partials/_modal/_ol-photo.html
+++ b/views/partials/_modal/_ol-photo.html
@@ -1,20 +1,70 @@
-<!-- Modal-->
-<div class="modal fade" id="kt_photo_modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog" role="document">
+<!--begin::Chat Panel-->
+<div class="modal fade" id="kt_photo_modal" role="dialog" data-backdrop="true">
+  <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
     <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Modal Title</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <i aria-hidden="true" class="ki ki-close"></i>
-        </button>
+      <!--begin::Card-->
+      <div class="card card-custom">
+        <!--begin::Body-->
+        <div class="card-body">
+          <div
+              id="carouselExampleCaptions"
+              class="carousel"
+              data-ride="false"
+              data-interval="false"
+          >
+            <div class="carousel-inner" id="carousel-inner">
+              <div class="carousel-item">
+                <img
+                    src="/assets/media/bg/bg-9.jpg"
+                    class="d-block"
+                    alt="..."
+                />
+                <div class="carousel-caption d-none d-md-block">
+                  <button
+                      type="button"
+                      class="btn btn-elevate btn-elevate-air"
+                      data-skin="dark"
+                      data-toggle="kt-tooltip"
+                      data-original-title="클릭하여 원본 확인"
+                      style="background-color:rgba(0,0,0,0.55);color: white"
+                  >
+                  </button>
+                </div>
+              </div>
+            </div>
+            <a
+                class="carousel-control-prev"
+                href="#carouselExampleCaptions"
+                role="button"
+                data-slide="prev"
+            >
+              <i
+                  class="flaticon2-fast-back"
+                  aria-hidden="true"
+                  style="color: red;font-size: 2rem"
+              ></i>
+            </a>
+            <a
+                class="carousel-control-next"
+                href="#carouselExampleCaptions"
+                role="button"
+                data-slide="next"
+            >
+              <i
+                  class="flaticon2-fast-next"
+                  aria-hidden="true"
+                  style="color: red;font-size: 2rem"
+              ></i>
+            </a>
+          </div>
+        </div>
+        <!--end::Body-->
+        <div class="overlay-layer bg-gray-o-75" style="display: none;">
+          <div class="spinner spinner-danger spinner-lg spinner-lg"></div>
+        </div>
       </div>
-      <div class="modal-body">
-
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-light-danger font-weight-bold" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary font-weight-bold">Save changes</button>
-      </div>
+      <!--end::Card-->
     </div>
   </div>
 </div>
+<!--end::Chat Panel-->
