fix: Fix bugs & modify UI
Set all maps to refer to global 'window.webgis' for initial coordinates
Adjust navi menu item height & padding
Alter 'WTT_WSER_MA' table's 'PIP_DIP' column data type (INT -> VARCHAR)

--- a/tools/webpack/webgis/metronic/style.scss
+++ b/tools/webpack/webgis/metronic/style.scss
@@ -152,6 +152,12 @@
   }
 }
 
+////////////////////////////////////////////////////////////////
+
+.navi .navi-item .navi-link {
+  padding: .5rem 1.5rem;
+}
+
 @import
   "../service/service"
 ;
