--- a/views/partials/_aside.html
+++ b/views/partials/_aside.html
@@ -150,19 +150,19 @@
                   <i class="menu-arrow" style="color: transparent;"></i>
                 </a>
               </li>
-              <li class="menu-item" aria-haspopup="true" data-menu-toggle="hover">
-                <a href="javascript:;" class="menu-link menu-toggle">
-                  <i class="menu-bullet">
-                    <!--                    <i class="ki ki-minus icon-lg" style="color: transparent;"></i>-->
-                    <img src="assets/media/symbols/SA005.png"><!-- TODO: 아이콘 정리 -->
-                  </i>
-                  <span class="menu-text ml-2">편락관</span>
-                  <span class="menu-label">
-                    <i class="ol-table-code-wtl" id="wtl_taper_ps"></i>
-                  </span>
-                  <i class="menu-arrow" style="color: transparent;"></i>
-                </a>
-              </li>
+<!--              <li class="menu-item" aria-haspopup="true" data-menu-toggle="hover">-->
+<!--                <a href="javascript:;" class="menu-link menu-toggle">-->
+<!--                  <i class="menu-bullet">-->
+<!--                    &lt;!&ndash;                    <i class="ki ki-minus icon-lg" style="color: transparent;"></i>&ndash;&gt;-->
+<!--                    <img src="assets/media/symbols/SA005.png">&lt;!&ndash; TODO: 아이콘 정리 &ndash;&gt;-->
+<!--                  </i>-->
+<!--                  <span class="menu-text ml-2">편락관</span>-->
+<!--                  <span class="menu-label">-->
+<!--                    <i class="ol-table-code-wtl" id="wtl_taper_ps"></i>-->
+<!--                  </span>-->
+<!--                  <i class="menu-arrow" style="color: transparent;"></i>-->
+<!--                </a>-->
+<!--              </li>-->
               <li class="menu-item" aria-haspopup="true" data-menu-toggle="hover">
                 <a href="javascript:;" class="menu-link menu-toggle">
                   <i class="menu-bullet">
@@ -266,19 +266,19 @@
                   <i class="menu-arrow" style="color: transparent;"></i>
                 </a>
               </li>
-              <li class="menu-item" aria-haspopup="true" data-menu-toggle="hover">
-                <a href="javascript:;" class="menu-link menu-toggle">
-                  <i class="menu-bullet">
-                    <!--                    <i class="ki ki-minus icon-lg" style="color: transparent;"></i>-->
-                    <img src="assets/media/symbols/SA211_SCV.png">
-                  </i>
-                  <span class="menu-text ml-2">스케일부스터</span>
-                  <span class="menu-label">
-                    <i class="ol-table-code-wtl" id="viw_wtl_scvst_ps"></i>
-                  </span>
-                  <i class="menu-arrow" style="color: transparent;"></i>
-                </a>
-              </li>
+<!--              <li class="menu-item" aria-haspopup="true" data-menu-toggle="hover">-->
+<!--                <a href="javascript:;" class="menu-link menu-toggle">-->
+<!--                  <i class="menu-bullet">-->
+<!--                    &lt;!&ndash;                    <i class="ki ki-minus icon-lg" style="color: transparent;"></i>&ndash;&gt;-->
+<!--                    <img src="assets/media/symbols/SA211_SCV.png">-->
+<!--                  </i>-->
+<!--                  <span class="menu-text ml-2">스케일부스터</span>-->
+<!--                  <span class="menu-label">-->
+<!--                    <i class="ol-table-code-wtl" id="viw_wtl_scvst_ps"></i>-->
+<!--                  </span>-->
+<!--                  <i class="menu-arrow" style="color: transparent;"></i>-->
+<!--                </a>-->
+<!--              </li>-->
               <li class="menu-item menu-item-submenu" aria-haspopup="true" data-menu-toggle="hover">
                 <a href="javascript:;" class="menu-link menu-toggle">
                   <i class="menu-bullet">
@@ -377,17 +377,17 @@
                         <!--                        </span>-->
                       </a>
                     </li>
-                    <li class="menu-item" aria-haspopup="true">
-                      <a href="javascript:;" class="menu-link">
-                        <i class="menu-bullet">
-                          <span></span>
-                        </i>
-                        <span class="menu-text ml-2">경계변</span>
-                        <!--                        <span class="menu-label">-->
-                        <!--                          <i class="ol-table-code-wtl"></i>-->
-                        <!--                        </span>-->
-                      </a>
-                    </li>
+<!--                    <li class="menu-item" aria-haspopup="true">-->
+<!--                      <a href="javascript:;" class="menu-link">-->
+<!--                        <i class="menu-bullet">-->
+<!--                          <span></span>-->
+<!--                        </i>-->
+<!--                        <span class="menu-text ml-2">경계변</span>-->
+<!--                        &lt;!&ndash;                        <span class="menu-label">&ndash;&gt;-->
+<!--                        &lt;!&ndash;                          <i class="ol-table-code-wtl"></i>&ndash;&gt;-->
+<!--                        &lt;!&ndash;                        </span>&ndash;&gt;-->
+<!--                      </a>-->
+<!--                    </li>-->
                   </ul>
                 </div>
               </li>
@@ -410,7 +410,7 @@
                   </i>
                   <span class="menu-text ml-2">보수공사</span>
                   <span class="menu-label">
-                    <i class="ol-table-code-wtl" id="viw_wtt_wutl_ht_re"></i>
+                    <i class="ol-table-code-wtl" id="viw_wtt_wutl_ht"></i>
                   </span>
                   <i class="menu-arrow" style="color: transparent;"></i>
                 </a>
