--- a/tools/webpack/webgis/stylesheet/modal.scss
+++ b/tools/webpack/webgis/stylesheet/modal.scss
@@ -7,6 +7,10 @@
   .card-header {
     font-size: 13px !important;
     min-height: 60px;
+
+    .label {
+      vertical-align: text-bottom;
+    }
   }
 
   .card-body {
@@ -18,6 +22,7 @@
       overflow: hidden;
       padding: 0.5rem 0.5rem;
     }
+
     .table td {
       padding: 0.5rem 0.5rem;
     }
@@ -37,6 +42,25 @@
     .btn {
       font-size: 13px !important;
       padding: 0.5rem 0.75rem;
+    }
+  }
+}
+
+#kt_photo_modal {
+
+  .card-body {
+    padding: 1rem;
+
+    .carousel-inner {
+      border-radius: 4px;
+
+      .carousel-item {
+        max-height: 65vh;
+
+        img {
+          width: 100%;
+        }
+      }
     }
   }
 }
