--- a/tools/webpack/webgis/views/partials/_modal/_ol-info.html
+++ b/tools/webpack/webgis/views/partials/_modal/_ol-info.html
@@ -5,20 +5,15 @@
       <!--begin::Card-->
       <div class="card card-custom">
         <!--begin::Header-->
-        <div class="card-header align-items-center">
-          <div class="text-left flex-grow-1">
-            <div class="text-dark font-weight-bold font-size-h6" id="card_header_title"></div>
-            <div>
-              <span class="label label-dot label-success" id="card_header_badge"></span>
-              <span class="font-weight-bolder font-size-sm" id="card_badge_text"></span>
-            </div>
+        <div class="card-header">
+          <div class="card-title">
+            <h3 class="card-label"></h3>
+            <span class="label label-rounded label-success label-inline font-weight-bold"></span>
           </div>
-          <div class="text-center flex-grow-1">
-          </div>
-          <div class="text-right flex-grow-1">
-            <button type="button" class="btn btn-clean btn-md btn-icon btn-icon-md" data-dismiss="modal">
-              <i class="ki ki-close icon-1x"></i>
-            </button>
+          <div class="card-toolbar">
+            <a href="#" class="btn btn-icon btn-sm btn-hover-light-primary" data-dismiss="modal">
+              <i class="ki ki-close icon-nm"></i>
+            </a>
           </div>
         </div>
         <!--end::Header-->
@@ -36,17 +31,18 @@
         <!--begin::Footer-->
         <div class="card-footer">
           <!--begin::Compose-->
-          <a href="javascript:;" class="btn btn-outline-secondary btn-hover-primary btn-md font-weight-bolder" id="btn_location"
+          <a href="javascript:;" class="btn btn-outline-secondary btn-hover-primary btn-md font-weight-bolder"
+             id="btn_location"
              data-toggle="tooltip" title="화면 가운데로 이동" data-placement="auto">
             <i class="fas fa-map-marker-alt icon-md" id="btn_location"></i>
           </a>
           <div class="btn-group" role="group">
-<!--              <a href="javascript:;" class="btn btn-outline-secondary btn-md font-weight-bolder" id="btn_history_modal">-->
-<!--                <i class="far fa-file-alt icon-md" id="btn_history_modal"></i> 보수내역-->
-<!--              </a>-->
-<!--              <a href="javascript:;" class="btn btn-outline-secondary btn-md font-weight-bolder" id="btn_photo_modal">-->
-<!--                <i class="far fa-file-image icon-md" id="btn_photo_modal"></i> 사진보기-->
-<!--              </a>-->
+            <a href="javascript:;" class="btn btn-outline-secondary btn-md font-weight-bolder" id="btn_history_modal">
+              <i class="far fa-file-alt icon-md" id="btn_history_modal"></i> 보수내역
+            </a>
+            <a href="javascript:;" class="btn btn-outline-secondary btn-md font-weight-bolder" id="btn_photo_modal">
+              <i class="far fa-file-image icon-md" id="btn_photo_modal"></i> 사진보기
+            </a>
           </div>
           <!--begin::Compose-->
         </div>
