--- a/tools/webpack/webgis/views/partials/_modal/_ol-photo.html
+++ b/tools/webpack/webgis/views/partials/_modal/_ol-photo.html
@@ -4,7 +4,18 @@
     <div class="modal-content">
       <!--begin::Card-->
       <div class="card card-custom">
-        <!--begin::Body-->
+        <!--begin::Header-->
+        <div class="card-header">
+          <div class="card-title">
+            <h3 class="card-label"></h3>
+          </div>
+          <div class="card-toolbar">
+            <a href="#" class="btn btn-icon btn-sm btn-hover-light-primary" data-dismiss="modal">
+              <i class="ki ki-close icon-nm"></i>
+            </a>
+          </div>
+        </div>
+        <!--end::Header-->
         <div class="card-body">
           <div
               id="carouselExampleCaptions"
@@ -12,7 +23,7 @@
               data-ride="false"
               data-interval="false"
           >
-            <div class="carousel-inner" id="carousel-inner">
+            <div class="carousel-inner">
               <div class="carousel-item">
                 <img
                     src="/assets/media/bg/bg-9.jpg"
@@ -57,10 +68,6 @@
               ></i>
             </a>
           </div>
-        </div>
-        <!--end::Body-->
-        <div class="overlay-layer bg-gray-o-75" style="display: none;">
-          <div class="spinner spinner-danger spinner-lg spinner-lg"></div>
         </div>
       </div>
       <!--end::Card-->
