--- a/tools/webpack/webgis/views/partials/_modal/_ol-photo.html
+++ b/tools/webpack/webgis/views/partials/_modal/_ol-photo.html
@@ -26,7 +26,7 @@
             <div class="carousel-inner">
               <div class="carousel-item">
                 <img
-                    src="/assets/media/bg/bg-9.jpg"
+                    src="/assets/media/bg/bg-yeongju.png"
                     class="d-block"
                     alt="..."
                 />
