--- a/tools/webpack/webgis/views/partials/_header-service-search.html
+++ b/tools/webpack/webgis/views/partials/_header-service-search.html
@@ -84,6 +84,79 @@
         <!--begin::Toggle-->
         <button type="button"
                 class="btn btn-sm font-weight-bolder btn-text-light btn-hover-bg-light btn-hover-text-primary ml-2 px-2 py-2 font-size-lg"
+                id="btn-map-hybrid">
+          일반 지도
+        </button>
+
+        <!--end::Toggle-->
+      </div>
+
+      <!--end::Create-->
+
+      <!--begin::Create-->
+      <div class="topbar-item">
+
+        <!--begin::Toggle-->
+        <button type="button"
+                class="btn btn-sm font-weight-bolder btn-text-light btn-hover-bg-light btn-hover-text-primary ml-2 px-2 py-2 font-size-lg"
+                id="btn-map-roadview">
+          로드뷰
+        </button>
+
+        <!--end::Toggle-->
+      </div>
+
+      <!--end::Create-->
+
+      <div class="outer ml-4 mr-2">
+        <div class="inner"></div>
+      </div>
+
+      <div class="topbar-item">
+
+        <!--begin::Toggle-->
+        <button type="button"
+                class="btn btn-sm font-weight-bolder btn-text-light btn-hover-bg-light btn-hover-text-primary ml-2 px-2 py-2 font-size-lg"
+                data-toggle="dropdown" aria-haspopup="false" aria-expanded="false"
+                data-offset="0,10">
+          시설 관리
+        </button>
+
+        <!--end::Toggle-->
+
+        <!--begin::Dropdown-->
+        <div class="dropdown-menu p-0 m-0 dropdown-menu-right dropdown-menu-anim-up dropdown-menu-md">
+
+          <!-- TODO: 구별이 쉽게 선택한 메뉴에 primary color 배경을 적용 -->
+          <!--begin::Navigation-->
+          <ul class="navi navi-hover navi-active navi-accent py-3">
+            <li class="navi-item" data-toggle="modal" data-target="#exampleModal2">
+              <a href="javascript:;" class="navi-link">
+													<span class="navi-icon">
+														<i class="la la-file-text icon-xl"></i>
+													</span>
+                <span class="navi-text">&nbsp;가압장 관리업체 현황</span>
+              </a>
+            </li>
+          </ul>
+
+          <!--end::Navigation-->
+
+        </div>
+
+        <!--end::Dropdown-->
+      </div>
+
+      <div class="outer ml-4 mr-2">
+        <div class="inner"></div>
+      </div>
+
+      <!--begin::Create-->
+      <div class="topbar-item">
+
+        <!--begin::Toggle-->
+        <button type="button"
+                class="btn btn-sm font-weight-bolder btn-text-light btn-hover-bg-light btn-hover-text-primary ml-2 px-2 py-2 font-size-lg"
                 data-toggle="dropdown" aria-haspopup="false" aria-expanded="false"
                 data-offset="0,10">
           <!--          <span class="svg-icon svg-icon-md">&lt;!&ndash;begin::Svg Icon | path:C:\wamp64\www\keenthemes\themes\metronic\theme\html\demo5\dist/../src/media/svg/icons\Communication\Active-call.svg&ndash;&gt;<svg-->
