--- a/demo5/src/sass/components/_variables.bootstrap.scss
+++ b/demo5/src/sass/components/_variables.bootstrap.scss
@@ -379,7 +379,8 @@ $body-color:                						$dark-75 !default;
 
 // Font family
 //$font-family-base:            						Poppins, Helvetica, "sans-serif" !default;
-$font-family-base:            						'Nanum Gothic', "sans-serif" !default;
+//$font-family-base:            						'Nanum Gothic', "sans-serif" !default;
+$font-family-base:            						'Noto Sans KR', "sans-serif" !default;
 
 $font-size-base:              						1rem !default; // Assumes the browser default, typically `13px`
 $font-size-lg:               	 					$font-size-base * 1.08 !default;   // 14.04px
