--- a/tools/webpack/webgis/stylesheet/service.scss
+++ b/tools/webpack/webgis/stylesheet/service.scss
@@ -65,65 +65,96 @@
 
 ////////////////////////////////////////////////////////////////
 
+#card_search_map {
+  .ribbon-target {
+    bottom: 0;
+    right: -0.3rem;
+    box-shadow: none;
+    border-style: solid;
+    border-bottom-style: none;
+    border-color: #0078D7;
+    border-width: 0.2rem;
+    padding: 0.5rem;
+
+    .btn {
+      padding: 0.5rem 0.75rem;
+    }
+  }
+
+  #search_map {
+    width: 100%;
+    height: 42.5vh;
+    transition: all 0.5s ease;
+    border-style: solid;
+    border-top-style: none;
+    border-right-style: none;
+    border-left-style: none;
+    border-color: #0078D7;
+    border-width: 0.2rem;
+  }
+}
+
 #card_search {
+  box-shadow: none;
+
+  #card_dist_map {
+    width: 100%;
+    height: 80vh;
+    border-radius: 5px;
+  }
+
   .card-body {
-    padding: 0;
-
-    .ribbon-target {
-      right: -2px;
-      top: 10px;
-    }
-
-    #kt_card_1 {
-      .card-header {
-        min-height: 0;
+    .dataTables_wrapper {
+      .row {
+        width: auto;
+        margin: 5px 10px;
       }
 
-      .card-body {
-        padding: 0;
-
-        #card_search_map {
-          width: 100%;
-          height: 45vh;
-          border-radius: 5px;
-        }
+      #kt_datatable_btn_group {
+        display: flex;
+        justify-content: flex-end;
+        align-items: flex-end;
       }
-    }
 
-    #kt_card_2 {
-      .card-body {
-        padding: 0;
-
-        #card_dist_map {
-          width: 100%;
-          height: 80vh;
-          border-radius: 5px;
-        }
+      .dataTables_pager {
+        justify-content: flex-end;
+        align-items: flex-end;
       }
     }
 
     #kt_datatable {
-      margin: 0 0 1rem 0 !important;
+      margin: 0 !important;
+
+      thead {
+        th {
+          color: #0078D7;
+          font-weight: bolder;
+          white-space: nowrap;
+          padding: 0.5rem 0.5rem 0.25rem 0.5rem;
+          border-bottom-color: transparent;
+        }
+
+        .filter {
+          th {
+            padding: 0.25rem 0.5rem 0.5rem 0.5rem;
+          }
+
+          .datatable-input {
+            font-weight: bolder;
+          }
+        }
+
+        .bootstrap-select > .dropdown-toggle {
+          padding: 0.45rem 1rem;
+          border-radius: 0.28rem;
+        }
+      }
 
       td {
         white-space: nowrap;
-        padding: 0.25rem 0.5rem;
-      }
-
-      th {
-        white-space: nowrap;
-        padding: 0.5rem 0.5rem;
+        padding: 0.4rem;
       }
     }
-  }
-
-  .button {
-    position: absolute;
-    left: 50%;
-    bottom: 5px;
-    margin: 0 auto;
-    z-index: 1000;
-    padding: 5px;
   }
 
   .overlay-layer {
