--- a/tools/webpack/webgis/views/partials/_content-service-register.html
+++ b/tools/webpack/webgis/views/partials/_content-service-register.html
@@ -1,5 +1,5 @@
 <!--begin::Entry-->
-<div class="d-flex flex-column-fluid mb-5">
+<div class="d-flex flex-column-fluid mb-5" data-scroll="true">
   <!--begin::Container-->
   <div class="container-fluid">
     <div class="row">
